# stack_fights

./: CMakeLists.txt  README.md
lib/: ArcherUnit.hpp  ArmoredUnit.hpp  Army.cpp  Army.hpp  CMakeLists.txt  CanBe.hpp  Command.hpp  Engine.cpp  Engine.hpp  ISpecialAbility.cpp  ISpecialAbility.hpp  IUnit.cpp  IUnit.hpp  IUnitCreator.cpp  IUnitCreator.hpp  InfantryUnit.hpp  MageUnit.hpp  Observer.hpp  SpecialUnits.cpp  SquireUnit.hpp  Strategy.hpp  cleric.hpp  command.cpp  hero.hpp  main.cpp  observer.cpp  siege_unit.hpp  strategy.cpp
